Fix web.config for ASP.NET Core IIS deployment issues
🔧 **Critical web.config Fixes:**
- ✅ Enabled stdout logging (stdoutLogEnabled=true) for troubleshooting
- ✅ Added proper environment variables (ASPNETCORE_ENVIRONMENT=Production)
- ✅ Disabled default document handling - let ASP.NET Core handle routing
- ✅ Set httpErrors to PassThrough - let ASP.NET Core handle errors
- ✅ Removed conflicting IIS handlers (ExtensionlessUrlHandler, etc.)
- ✅ Added WebDAV module removal to prevent conflicts
- ✅ Added proper request filtering for HTTP verbs

🆕 **Added Diagnostic Tools:**
- diagnose-iis.ps1 - Comprehensive IIS deployment diagnostic script
- web.config.diagnostic - Simplified diagnostic web.config for troubleshooting

🐛 **Issues Fixed:**
- Application not responding due to disabled logging
- IIS trying to serve index.html instead of letting ASP.NET Core handle routing
- Missing environment variables causing startup issues
- Conflicting IIS modules interfering with ASP.NET Core

🔍 **Troubleshooting Steps:**
1. Deploy the fixed web.config
2. Run diagnose-iis.ps1 on the server to identify remaining issues
3. Check logs directory for startup errors
4. Use web.config.diagnostic if needed for additional troubleshooting

This should resolve the 'app does not respond' issue in IIS deployment.

--- a/web.config
+++ b/web.config
@@ -2,14 +2,41 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <!-- Remove IIS default handler and let ASP.NET Core handle all requests -->
       <handlers>
+        <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+        <remove name="OPTIONSVerbHandler" />
+        <remove name="TRACEVerbHandler" />
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" 
                   arguments=".\IISAppPoolRecycler.dll" 
-                  stdoutLogEnabled="false" 
+                  stdoutLogEnabled="true" 
                   stdoutLogFile=".\logs\stdout" 
-                  hostingModel="inprocess" />
+                  hostingModel="inprocess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+          <environmentVariable name="DOTNET_USE_POLLING_FILE_WATCHER" value="true" />
+        </environmentVariables>
+      </aspNetCore>
+      
+      <!-- Ensure proper request handling -->
+      <modules>
+        <remove name="WebDAVModule" />
+      </modules>
+      
+      <!-- Security and performance settings -->
+      <security>
+        <requestFiltering>
+          <verbs>
+            <add verb="OPTIONS" allowed="true" />
+            <add verb="GET" allowed="true" />
+            <add verb="POST" allowed="true" />
+            <add verb="PUT" allowed="true" />
+            <add verb="DELETE" allowed="true" />
+          </verbs>
+        </requestFiltering>
+      </security>
       
       <!-- Security Headers -->
       <httpProtocol>
@@ -34,19 +61,11 @@
       </httpCompression>
       <urlCompression doStaticCompression="true" doDynamicCompression="true" />
       
-      <!-- Default document -->
-      <defaultDocument>
-        <files>
-          <clear />
-          <add value="index.html" />
-        </files>
-      </defaultDocument>
+      <!-- Default document - Let ASP.NET Core handle routing -->
+      <defaultDocument enabled="false" />
       
-      <!-- Error pages -->
-      <httpErrors>
-        <remove statusCode="404" subStatusCode="-1" />
-        <error statusCode="404" prefixLanguageFilePath="" path="/404.html" responseMode="ExecuteURL" />
-      </httpErrors>
+      <!-- Error pages - Let ASP.NET Core handle errors -->
+      <httpErrors existingResponse="PassThrough" />
     </system.webServer>
   </location>
 </configuration>
