--- a/web.config
+++ b/web.config
@@ -13,9 +13,12 @@
                   arguments=".\IISAppPoolRecycler.dll" 
                   stdoutLogEnabled="true" 
                   stdoutLogFile=".\logs\stdout" 
-                  hostingModel="inprocess">
+                  hostingModel="inprocess"
+                  startupTimeLimit="120"
+                  requestTimeout="00:20:00">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+          <environmentVariable name="ASPNETCORE_URLS" value="http://*:80" />
           <environmentVariable name="DOTNET_USE_POLLING_FILE_WATCHER" value="true" />
         </environmentVariables>
       </aspNetCore>
